--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,6 @@ set(CMAKE_CXX_STANDARD 14)
 find_package(OpenCV COMPONENTS core imgproc highgui videoio)
 include_directories(${OpenCV_INCLUDE_DIRS})
 
-add_executable(image_streamer main.cpp input.cpp output.cpp httpd.cpp)
+add_executable(image_streamer main.cpp input.cpp output.cpp httpd.cpp image_streamer.cpp)
 
 target_link_libraries(image_streamer ${OpenCV_LIBS} pthread dl)
