--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,8 @@ project(image_streamer)
 set(CMAKE_CXX_STANDARD 14)
 
 find_package(OpenCV COMPONENTS core imgproc highgui videoio)
-include_directories(${OpenCV_INCLUDE_DIRS})
+set(IMAGE_STREAMER_INCLUDE_DIR "include")
+include_directories(${OpenCV_INCLUDE_DIRS} ${IMAGE_STREAMER_INCLUDE_DIR})
 
 add_executable(image_streamer_exe main.cpp input.cpp output.cpp httpd.cpp image_streamer.cpp)
 
